--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,40 @@
+---
+import Header from '@/sections/global/Header.astro';
+import Footer from '@/sections/global/Footer.astro';
+import '@/styles/global.css';
+import '@fontsource-variable/dm-sans';
+
+interface Props {
+	title: string;
+}
+
+const { title } = Astro.props;
+---
+
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<meta name="robots" content="LayoutPage, follow" />
+		<meta
+			name="description"
+			content="En este web puedes ver como va el campeonato de pilotos, de constructores y también ver a los pilotos eh escuderías."
+		/>
+		<meta name="og:site" content="@F1NewsV2.0" />
+		<meta name="og:creator" content="@Juan.Cutiva_" />
+		<meta name="og:title" content="F1News" />
+		<meta
+			name="og:description"
+			content="En este web puedes ver como va el campeonato de pilotos, de constructores y también ver a los pilotos eh escuderías."
+		/>
+		<link rel="icon" type="image/png" href="/f1logo.png" />
+
+		<title>F1 News | {title}</title>
 	</head>
-	<body>
+	<body class="font-dm w-full">
+		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
