--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,18 +1,22 @@
 ---
 import Header from '@/sections/global/Header.astro';
 import Footer from '@/sections/global/Footer.astro';
+
 import '@/styles/global.css';
 import '@fontsource-variable/dm-sans';
+
+import { getLangFromUrl } from '@/i18n/utils';
+import { ClientRouter } from 'astro:transitions';
+const lang = getLangFromUrl(Astro.url);
 
 interface Props {
 	title: string;
 }
-
 const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="es">
+<html lang={lang} class="scroll-smooth">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
@@ -31,6 +35,7 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/png" href="/f1logo.png" />
 
 		<title>F1 News | {title}</title>
+		<ClientRouter />
 	</head>
 	<body class="font-dm w-full">
 		<Header />
