--- a/src/components/header/LiHeader.astro
+++ b/src/components/header/LiHeader.astro
@@ -6,7 +6,7 @@ interface Props {
 
 const { href, text } = Astro.props;
 
-import { getLangFromUrl, useTranslations } from '@/i18n/utils';
+import { getLangFromUrl } from '@/i18n/utils';
 import { getRelativeLocaleUrl } from 'astro:i18n';
 
 const lang = getLangFromUrl(Astro.url);
