--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,7 +32,7 @@ const { title } = Astro.props;
 			name="og:description"
 			content="En este web puedes ver como va el campeonato de pilotos, de constructores y también ver a los pilotos eh escuderías."
 		/>
-		<link rel="icon" type="image/png" href="/f1logo.png" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
 		<title>F1 News | {title}</title>
 		<ClientRouter />
