--- a/src/assets/F1Image.astro
+++ b/src/assets/F1Image.astro
@@ -1,12 +1,20 @@
 ---
 interface Props {
 	fill: string;
+	width: string;
+	height: string;
 }
 
-const { fill } = Astro.props;
+const { fill, width, height } = Astro.props;
 ---
 
-<svg width="80" height="20" viewBox="0 0 80 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg
+	width={width}
+	height={height}
+	viewBox="0 0 80 20"
+	fill="none"
+	xmlns="http://www.w3.org/2000/svg"
+>
 	<g clip-path="url(#clip0_1_38)">
 		<g clip-path="url(#clip1_1_38)">
 			<path
