--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang={lang} class="scroll-smooth">
+<html lang={lang} class="">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
@@ -43,3 +43,9 @@ const { title } = Astro.props;
 		<Footer />
 	</body>
 </html>
+
+<style>
+	html {
+		scroll-behavior: smooth;
+	}
+</style>
