`Added custom variant for dark mode and updated theme variables in global.css`

--- a/src/sections/global/Header.astro
+++ b/src/sections/global/Header.astro
@@ -34,7 +34,7 @@ const second = HEADER.slice(2);
 ---
 
 <header
-	class="flex h-fit w-full items-center justify-center bg-yellow-500"
+	class="flex h-fit w-full items-center justify-center bg-yellow-500 dark:bg-purple-400"
 	transition:name="header"
 >
 	<div class="flex h-fit w-[90%] items-center justify-center bg-gray-600">
