`Refactor Theme toggle component in Header.astro`

--- a/src/sections/global/Header.astro
+++ b/src/sections/global/Header.astro
@@ -59,7 +59,7 @@ const second = HEADER.slice(2);
 				))
 			}
 		</ul>
-		<div class="w-[15%] bg-orange-500">
+		<div class="flex w-[15%] items-center justify-center bg-orange-500">
 			<Lang />
 			<Theme />
 		</div>
